--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <!-- 5.0 background container autoPlay:true,  -->
 
                 <div class="bg-container-youtube"></div>
-                <header><a class="popup-vimeo video-button" href="https://vimeo.com/45830194"><i
+                <header><a class="popup-vimeo video-button" href=""><i
                             class="fa fa-caret-right" aria-hidden="true"></i></a>
                     <h4>戸村光さんにサービスを紹介していただきました！</h4>
                 </header>
